--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <title>Cook.io - Easy peasy</title>
     <meta name="title" content="Cook.io - Easy peasy">
-    <meta name="description" content="This is a recipe aplication made by MinYonhee">
+    <meta name="description" content="This is a recipe aplication made by Rainbow Tech">
     
     <!--favicon-->
     
@@ -26,7 +26,7 @@
 
     <!--Material icon-->
 
-    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0..1,0" rel="stylesheet">
    
     <!--custom css --> 
    
