--- a/index.html
+++ b/index.html
@@ -524,7 +524,7 @@
             <img src="./assets/images/logo-dark.svg" width="156" height="32" alt="cook.io recipes" class="logo-dark"> 
         </a>
         <a href="https://www.edamam.com/" target="_blank" class="edamam">
-            <img src="./assets/images/edamam.svg" width="200" height="40" loading="lazy" alt="edamam free recipe api">
+            <img src="./assets/images/edamam.svg" width="200" height="40" loading="lazy" alt="edamam recipe api">
         </a>
         </footer>
     </body>
