--- a/login.html
+++ b/login.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500&family=DM+Serif+Display&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0..1,0" rel="stylesheet">
+    <script src="./assets/js/login.js" defer></script>
     <title>Login</title>
 </head>
 <body>
@@ -16,15 +17,16 @@
         <header>
             <img src="./assets/images/logo-dark.svg" alt="logo">
         </header>
-        <form action="">
+        <form id="form">
             <div>
-                <label for="input-email">E-mail:</label>
-                <input type="text" id="input-email" required placeholder="Digite seu e-mail">
+                <label for="input-email">Usuário:</label>
+                <input type="text" id="input-user" required placeholder="Digite seu usuário">                
             </div>
             <div>
                 <label for="input-password">E-mail:</label>
                 <input type="password" id="input-password" required placeholder="Digite sua senha">
             </div>
+            <span id="error">Usuário ou senha incorretos</span>
             <button type="submit">Entrar</button>
         </form>
     </main>
