--- a/index.html
+++ b/index.html
@@ -527,5 +527,11 @@
             <img src="./assets/images/edamam.svg" width="200" height="40" loading="lazy" alt="edamam recipe api">
         </a>
         </footer>
+
+        <div class="snackbar-container">
+            <div class="snackbar">
+                <p class="body-medium">Added to Recipe book</p>
+            </div>
+        </div>
     </body>
 </html>
