--- a/register.html
+++ b/register.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/css/style.css">
-    <link rel="stylesheet" href="./assets/css/login.css">
+    <link rel="stylesheet" href="./assets/css/register.css">
     <link rel="preconnect" href="https://fonts.googleapis.com"> 
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500&family=DM+Serif+Display&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0..1,0" rel="stylesheet">
-    <script src="./assets/js/login.js" defer></script>
-    <title>Login</title>
+    <script src="./assets/js/register.js" defer></script>
+    <title>Cadastre-se</title>
 </head>
 <body>
     <main>
@@ -18,10 +18,14 @@
             <img src="./assets/images/logo-dark.svg" alt="logo">
         </header>
         <form id="form">
-            <h1>Entre na sua conta explore as mais variadas receitas!</h1>
+            <h1>Crie sua conta explore as mais variadas receitas!</h1>
             <div>
-                <label for="input-email">Usuário:</label>
+                <label for="input-user">Usuário:</label>
                 <input type="text" id="input-user" required placeholder="Digite seu usuário">                
+            </div>
+            <div>
+                <label for="input-email">E-mail:</label>
+                <input type="email" id="input-email" required placeholder="Digite seu e-mail">
             </div>
             <div>
                 <label for="input-password">Senha:</label>
