--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Cook.io - Easy peasy </title>
     <meta name="title" content="Cook.io - Easy peasy">
     <meta name="description" content="This is a recipe aplication made by Rainbow Tech">
-    
+    <link rel="icon" type="image/png" href="assets/images/logo.png">
     <!--favicon-->
     
     <link rel="shortcut icon" href="./favicon.svg" type="image/svg+xml">
