pagina de receita

--- a/recipes.html
+++ b/recipes.html
@@ -745,8 +745,13 @@
 
              </div>
 
-             <div class="filter-actions"></div>
+             <div class="filter-actions">
+                <button class="btn btn-secondary label-large has-state" data-filter-clear>Clear</button>
+
+                <button class="btn btn-primary label-large" data-filter-toggler data-filter-submit>Apply</button>
+           
             </div>
+        </div>
 
         </article>
     </main>
