adicionado função de logout e campo de texto com o nome do usuário atual logado

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
             <img src="./assets/images/logo-light.svg" width="156" height="32" alt="cook.io recipes" class="logo-light">
             <img src="./assets/images/logo-dark.svg" width="156" height="32" alt="cook.io recipes" class="logo-dark"> 
         </a>
+            
         <nav class="navbar">
             <ul class="navbar-list">
                 <li>
@@ -66,6 +67,8 @@
 
             <span class="span">Saved Recipes</span>
         </a>
+        <p id="userName">Arthur Levy</p>
+        <button class="logout" id="logoutButton">Sair</button>
     </header>
 
     <!--#mobile nav-->
