--- a/recipes.html
+++ b/recipes.html
@@ -66,6 +66,8 @@
 
             <span class="span">Saved Recipes</span>
         </a>
+        <p id="userName">Arthur Levy</p>
+        <button class="logout" id="logoutButton">Sair</button>
     </header>
 
     <!--#mobile nav-->
