listagem de despesas feita

--- a/saved-recipes.html
+++ b/saved-recipes.html
@@ -67,29 +67,18 @@
             <span class="span">Saved Recipes</span>
         </a>
     </header>
-
-    <div class="card">
-        <figure class="card-media img-holder">
-            <img src="./assets/images/recipe.jpg" width="200" height="200" loading="lazy" alt="recipe name" class="img-cover">
-        </figure>
-
-        <div class="card-body">
-            <h3 class="title-small">
-                <a href="./detail.html" class="card-link">Recipe name</a>
-            </h3>
-            <div class="meta-wrapper">
-                <div class="meta-item">
-                    <span class="material-symbols-outlined" aria-hidden="true">schedule</span>
-                    <span class="label-medium"> 2 minutos</span>
-                </div>
-                <button class="icon-btn has-state removed" aria-label="Add to saved recipes">
-                    <span class="material-symbols-outlined bookmark-add" aria-hidden="true">bookmark_add</span>
-                    <span class="material-symbols-outlined bookmark" aria-hidden="true">bookmark</span>
-                </button>
-            </div>
+    <div id="savedRecipes">
+        <div id="savedRecipeCard">
+            <span>Galinha</span>
         </div>
-    </div>
+        <div id="savedRecipeCard">
+            <span>Galinha</span>
+        </div>
+        <div id="savedRecipeCard">
+            <span>Galinha</span>
+        </div>    
 
+    </div>
     <footer class="footer">
         <p class="copyright body-medium">copyright 2024 Rainbow Tech</p>
 
