Link de redirecionamento para página de login e cadastro

--- a/register.html
+++ b/register.html
@@ -32,6 +32,7 @@
                 <input type="password" id="input-password" required placeholder="Digite sua senha">
             </div>
             <span id="error">Usuário ou senha incorretos</span>
+            <p class="redirectParagraph">Já possui cadastro? Clique <a href="./login.html">aqui</a> e entre em sua conta!</p>
             <button type="submit">Entrar</button>
         </form>
     </main>
