--- a/login.html
+++ b/login.html
@@ -28,6 +28,7 @@
                 <input type="password" id="input-password" required placeholder="Digite sua senha">
             </div>
             <span id="error">Usuário ou senha incorretos</span>
+            <p class="redirectParagraph">Não possui cadastro? Clique <a href="./register.html">aqui</a> e cadastre-se!</p>
             <button type="submit">Entrar</button>
         </form>
     </main>
