--- a/saved-recipes.html
+++ b/saved-recipes.html
@@ -24,18 +24,15 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500&family=DM+Serif+Display&display=swap" rel="stylesheet">
 
-    <!--Material icon-->
 
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0..1,0" rel="stylesheet">
    
-    <!--custom css --> 
    
     <link rel="stylesheet" href="./assets/css/style.css">
    
-    <!-- custom js-->
      
-    <script src="./assets/js/global.js" type="module"></script>
-    <script src="./assets/js/saved-recipes.js" type="module"></script>
+    <script src="./assets/js/global.js" type="module" defer></script>
+    <script src="./assets/js/saved-recipes.js" type="module" defer></script>
 </head>
 <body>
     <!--#header-->
