correção de textos

--- a/recipes.html
+++ b/recipes.html
@@ -713,7 +713,7 @@
                                 </label>
                             </div>
 
-                            <a href="./recipes.html" class="btn btn-secondary label-large has-state">Show More</a>
+                            <a href="./recipes.html" class="btn btn-secondary label-large has-state">Mostrar mais</a>
                         </div>
                     </div>
 
@@ -1161,10 +1161,5 @@
 
         </article>
     </main>
-        <div class="snackbar-container">
-            <div class="snackbar">
-                <p class="body-medium">Added to Recipe book</p>
-            </div>
-        </div>
     </body>
 </html>
